Added About.js page, checked out Google-login
Need to add the respective images and links to the About.js page, setting up google login must be delayed until we deploy the application

--- a/smp-client/src/index.css
+++ b/smp-client/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base{
+  .for-links {
+    @apply underline hover:no-underline text-sky-600;
+  }
+}
